--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "foobugs/PHP53to54",
+    "name": "foobugs/php53to54",
     "description": "PHP53to54 is a collection of sniffs for PHP_CodeSniffer that check an PHP 5.3 application for PHP 5.4 compatibility.",
     "type": "library",
     "keywords": [
         "phpcs",
         "standards",
-        "php53",
-        "php54",
+        "php5.3",
+        "php5.4",
         "compatibility"
     ],
     "homepage": "https://github.com/foobugs/PHP53to54",
