--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "goatherd/php53to54",
     "description": "PHP53to54 is a collection of sniffs for PHP_CodeSniffer that check an PHP 5.3 application for PHP 5.4 compatibility.",
-    "type": "library",
+    "type": "phpcs-standard",
     "keywords": [
         "phpcs",
         "standards",
