--- a/composer.json
+++ b/composer.json
@@ -32,5 +32,8 @@
     },
     "autoload": {
         "psr-0": { "PHP53to54\\": "./PHP53to54" }
+    },
+    "extra": {
+        "phpcs-name": "PHP53to54"
     }
 }
