--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "goatherd/php53to54",
     "description": "PHP53to54 is a collection of sniffs for PHP_CodeSniffer that check an PHP 5.3 application for PHP 5.4 compatibility.",
-    "type": "library",
+    "type": "phpcs_installer",
     "keywords": [
         "phpcs",
         "standards",
@@ -27,8 +27,7 @@
         "source": "https://github.com/foobugs/PHP53to54"
     },
     "require": {
-        "php": ">=5.3",
-        "squizlabs/php_codesniffer": "1.4.*"
+        "goatherd/phpcs_installer": "master-dev"
     },
     "autoload": {
         "psr-0": { "PHP53to54\\": "./PHP53to54" }
