--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,8 @@
     "license": "BSD-2-Clause",
     "require": {
         "goatherd/phpcs_installer": "1.*"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "3.*"
     }
 }
