--- a/composer.json
+++ b/composer.json
@@ -34,16 +34,26 @@
     ],
     "require": {
         "php": ">=5.3",
-        "squizlabs/php_codesniffer": "1.5.1",
+        "squizlabs/php_codesniffer": "1.*",
         "goatherd/phpcs_installer": "*"
     },
     "autoload": {
-        "psr-0": { "PHP53to54\\": "./PHP53to54" }
+        "psr-0": { "PHP53to54\\": "./" }
     },
     "extra": {
         "phpcs-standard": "PHP53to54"
     },
     "require-dev": {
         "phpunit/phpunit": "3.*"
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "rm -f vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/PHP53to54/*",
+            "rm -df vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/PHP53to54",
+            "mkdir vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/PHP53to54",
+            "ln -s ${PWD}/ruleset.xml vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/PHP53to54/ruleset.xml",
+            "ln -s ${PWD}/Sniffs vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/PHP53to54/Sniffs",
+            "ln -s ${PWD}/AbstractSniff.php vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/PHP53to54/AbstractSniff.php"
+        ]
     }
 }
