missing license (applied same as with php52to53)

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "static",
         "analysis"
     ],
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Marcel Eichner",
