--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "goatherd/php53to54",
+    "name": "foobugs-standards/Php53to54",
     "description": "PHP_CodeSniffer standard for compatibility checking of PHP 5.3 to 5.4 migrations.",
     "type": "phpcs-standard",
     "keywords": [
@@ -34,10 +34,10 @@
             "role": "Developer"
         }
     ],
-    "homepage": "https://github.com/foobugs-standards/php53to54",
+    "homepage": "https://github.com/foobugs-standards/Php53to54",
     "support": {
-        "issues": "https://github.com/foobugs-standards/php53to54/issues",
-        "source": "https://github.com/foobugs-standards/php53to54"
+        "issues": "https://github.com/foobugs-standards/Php53to54/issues",
+        "source": "https://github.com/foobugs-standards/Php53to54"
     },
     "require": {
         "goatherd/phpcs-patch": "*",
@@ -47,19 +47,19 @@
         "phpunit/phpunit": "3.*"
     },
     "autoload": {
-        "psr-0": { "PHP53to54\\": "./" }
+        "psr-0": { "Php53to54\\": "./" }
     },
     "extra": {
-        "phpcs-standard": "php53to54"
+        "phpcs-standard": "Php53to54"
     },
     "scripts": {
         "post-install-cmd": [
-            "rm -f vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/php53to54/*",
-            "rm -df vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/php53to54",
-            "mkdir vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/php53to54",
-            "ln -s ${PWD}/ruleset.xml vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/php53to54/ruleset.xml",
-            "ln -s ${PWD}/Sniffs vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/php53to54/Sniffs",
-            "ln -s ${PWD}/AbstractSniff.php vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/php53to54/AbstractSniff.php"
+            "rm -f vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/Php53to54/*",
+            "rm -df vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/Php53to54",
+            "mkdir vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/Php53to54",
+            "ln -s ${PWD}/ruleset.xml vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/Php53to54/ruleset.xml",
+            "ln -s ${PWD}/Sniffs vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/Php53to54/Sniffs",
+            "ln -s ${PWD}/AbstractSniff.php vendor/squizlabs/php_codesniffer/CodeSniffer/Standards/Php53to54/AbstractSniff.php"
         ]
     }
 }
