--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "foobugs-standards/Php53to54",
+    "name": "foobugs-standards/php53to54",
     "description": "PHP_CodeSniffer standard for compatibility checking of PHP 5.3 to 5.4 migrations.",
     "type": "phpcs-standard",
     "keywords": [
@@ -40,6 +40,7 @@
         "source": "https://github.com/foobugs-standards/Php53to54"
     },
     "require": {
+        "php": ">=5.4.0",
         "goatherd/phpcs-patch": "*",
         "goatherd/phpcs_installer": "*"
     },
