--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ php:
   - 5.4
 
 before_script:
-  - composer install --dev
+  - composer install
 
 script:
-  - vendor/bin/phpunit
+  - phpunit
   - vendor/bin/phpcs --standard=PSR2 --report=summary -np Sniffs/ AbstractSniff.php
